added toString method to EquipmentVariable
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>